Fixed the way the read-only lists and maps are returned from the Menu and OrderImpl classes.